--- a/1. Basic web/page.html
+++ b/1. Basic web/page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web View</title>
 </head>
 
 <body>
@@ -64,7 +64,7 @@
         <textarea placeholder="Your comments" id="comments" name="" rows="12" cols="30" style="overflow-y: scroll;" ></textarea> <br> <br>
         
         <label for="gender">Are you</label> <br> <br>
-        <input type="radio" name="gender" value="Male" class="gender"> Male<br> <br>
+        <input type="radio" name="gender" value="Male" class="gender" id="radiom"> Male<br> <br>
         <input type="radio" name="gender" value="Female" class="gender"> Female<br> <br>
         <button type="submit" id="submit-btn"> Submit Query </button>
     </form>
