--- a/5. Quantum/page.html
+++ b/5. Quantum/page.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantum</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Quantum</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./pages/login.css" />
+  <link rel="stylesheet" href="./component/footer.css">
+  <script src="/pages/login.js" type="module" defer></script>
 </head>
 <body>
-    <div id="root"></div>
+  <div id="root">
+    <div class="nav">
+      <div class="nav-bg"></div>
+      <div class="logo-container">
+        <img src="/assets/icons/logo used in header.svg" alt="Quantum Logo" id="logo" />
+      </div>
+    </div>
+
+    <main class="container">
+      <div class="form-container">
+        <div class="top-bar">
+          <img src="/assets/icons/back.svg" alt="Back" class="back-arrow" />
+          <h3>Log in with Quantum</h3>
+        </div>
+
+        <form id="login-form" class="form">
+          <fieldset class="radio-group">
+            <input type="radio" id="district-radio" name="login-type" />
+            <label for="district-radio" tabindex="0">District</label>
+
+            <input type="radio" id="independent-school" name="login-type" />
+            <label for="independent-school" tabindex="0">Independent School</label>
+          </fieldset>
+
+          <label for="state-select" class="label-a">State</label>
+          <select id="state-select" class="dropdown" required>
+            <option value="">Select State</option>
+            <option value="abc">Alabama</option>
+          </select>
+
+          <label for="district-select" class="label-a">District</label>
+          <select id="district-select" class="dropdown" required>
+            <option value="">Select District</option>
+            <option value="def">Alabama School District</option>
+          </select>
+
+          <input type="text" id="user-id" class="text-field" placeholder="Username/Email ID*" autocomplete="username" required />
+          <a href="#" class="hyperlink forgot">FORGOT USERNAME?</a>
+
+          <div class="password-container">
+            <input type="password" id="pass" class="text-field" placeholder="Password*" autocomplete="current-password" required />
+            <span id="eye-icon" class="eye-icon">
+              <img src="/assets/icons/preview.svg" alt="Toggle password visibility" />
+            </span>
+          </div>
+
+          <a href="#" class="hyperlink forgot">FORGOT PASSWORD?</a>
+
+          <label class="remember-label" for="remember-me">
+            <input type="checkbox" id="remember-me" />
+            <span class="checkbox-custom"></span>
+            Remember me
+          </label>
+
+          <button type="submit" class="button">LOG IN</button>
+        </form>
+      </div>
+    </main>
+
+    <div id="footer-container" class="footer-container"></div>
+  </div>
 </body>
 </html>
