--- a/5. Quantum/home.html
+++ b/5. Quantum/home.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quantum</title>
-  <link rel="stylesheet" href="/pages/dashboard.css" />
+  <link rel="stylesheet" href="/styles/main-call/dashboard.css" />
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/component/footer.css" />
-  <link rel="stylesheet" href="/component/courseCard.css" />
   <script src="/pages/dashboard.js" type="module" defer></script>
   <script src="/component/dropdown.js" defer></script>
 </head>
