--- a/5. Quantum/home.html
+++ b/5. Quantum/home.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="/styles/main-call/dashboard.css" />
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/component/footer.css" />
-  <script src="/pages/dashboard.js" type="module" defer></script>
-  <script src="/component/dropdown.js" defer></script>
+  <script src="/script/dashboard.js" type="module" defer></script>
 </head>
 
 <body>
@@ -43,46 +42,41 @@
           <span>ADMIN</span>
         </div>
 
-        
+
 
       </div>
 
       <div class="nav-icons">
+
+
+        <!-- Alerts Wrapper -->
         <div class="alerts-wrapper">
           <div class="nav-tab dropdown" data-tab="alerts">
             <img src="/assets/icons/alerts.svg" alt="Alerts" />
+            <div class="badge" id="alerts-bubble"></div> <!-- Bubble for alerts -->
           </div>
-
           <div class="dropdown-content alerts-dropdown" id="alert-dropdown">
-            <div class="alerts-data" id="alerts-data">
-              <!-- Alerts will be injected here -->
-            </div>
-
+            <div class="alerts-data" id="alerts-data"></div>
             <div class="dropdown-footer">
-              <button class="dropdown-btn">Show All</button>
-              <button class="dropdown-btn">Create New</button>
+              <button class="dropdown-btn-2">Show All</button>
             </div>
           </div>
         </div>
 
+        <!-- Announcements Wrapper -->
         <div class="announcement-wrapper">
           <div class="nav-tab dropdown" data-tab="announcements">
             <img class="announ-img" src="/assets/icons/announcements.svg" alt="Announcements" />
+            <div class="badge" id="announcements-bubble"></div> <!-- Bubble for announcements -->
           </div>
-
           <div class="dropdown-content announcements-dropdown" id="announcement-dropdown">
-            <div class="announcements-data" id="announcements-data">
-              <!-- Announcements will be injected here -->
-            </div>
-
+            <div class="announcements-data" id="announcements-data"></div>
             <div class="dropdown-footer">
               <button class="dropdown-btn">Show All</button>
               <button class="dropdown-btn">Create New</button>
             </div>
           </div>
         </div>
-
-
 
 
         <div class="nav-tab" onclick="switchTab(this, 'pfp')">
@@ -130,7 +124,7 @@
         </div>
       </div>
 
-      
+
     </div>
 
     <div class="main-container">
