--- a/5. Quantum/page.html
+++ b/5. Quantum/page.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./pages/login.css" />
   <link rel="stylesheet" href="./component/footer.css">
-  <script src="/pages/login.js" type="module" defer></script>
+  <script src="/script/login.js" type="module" defer></script>
 </head>
 <body>
   <div id="root">
